--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         import { getFirestore, collection, onSnapshot, doc, setDoc, deleteDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
         // --- CONFIGURATION ---
-        const googleSheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTemIQAjyMsEqPPUYaNMIn2rwrEbuqR7NrW9vey_mC1iZmIn7FZlOH7g3Co7bZG5B18BJy7Cjldvs53/pub?output=csv';
+        const googleSheetUrl = 'https://gist.githubusercontent.com/musabaku/4290582705c6a5534e54f94b1689f2a2/raw/comogluPrice.csv';
         const DB_COLLECTION_NAME = 'completedProducts';
 
         // =================================================================================
